# gRPC-PROJECT

./: Cargo.toml  readme.md
.github/workflows/: test.yml
src/: error.rs  lib.rs  metadata.rs
src/client/: mod.rs
src/codec/: compression.rs  frame.rs  mod.rs
src/transport/: connection.rs  http2.rs  mod.rs
tests/: codec_test.rs  compression_test.rs  frame_test.rs  integration_test.rs  metadata_test.rs
tests/common/: mod.rs
