[package]
name = "grpc_project"  
version = "0.1.0"
edition = "2021"
description = "A modular gRPC implementation in Rust"

[dependencies]
# Core dependencies
h2 = "0.3.21"
http = "0.2.9"
tokio = { version = "1.34", features = ["full"] }
bytes = "1.5"

# Encoding and compression
flate2 = "1.0.28"
prost = "0.12.3"

# Async and futures
futures = "0.3.29"
futures-util = "0.3.29"
pin-project = "1.1.3"

# Utilities
tower = "0.4.13"
thiserror = "1.0.50"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.34", features = ["full", "test-util"] }
prost = { version = "0.12.3", features = ["prost-derive"] }